# torchtb

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CMakeLists.txt  torchtbConfig.cmake.in
examples/: CMakeLists.txt  floatcsv2parquet.cpp  sandbox.cpp
include/: AnalyticTable.h  AnalyticTableNumeric.h  CSV_IO.h  Converter.h  Parquet_IO.h  TrainingBundle.h  XYMatrix.h
include/detail/: pch.h  utils.h
src/: AnalyticTable.cpp  AnalyticTableNumeric.cpp  CMakeLists.txt  CSV_IO.cpp  Converter.cpp  Parquet_IO.cpp  TrainingBundle.cpp  XYMatrix.cpp
src/detail/: utils.cpp
tests/: CMakeLists.txt  tAnalyticTable.cpp  tAnalyticTableNumeric.cpp  tCSV_IO.cpp  tConverter.cpp  tParquet_IO.cpp  tTrainingBundle.cpp  tXYMatrix.cpp
